--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ html,body {
 
 .c-hamburger:hover
 {
-	box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+	box-shadow: 0 2px 6px rgba(0,0,0,0.75);
 	background: white;
 }
 
@@ -372,7 +372,7 @@ object{
 			    padding: 10px;
 			    text-align: center;
 			    font-weight: 900;
-			    font-size: 14px;
+			    font-size: 13px;
 			    width: 100%;
 		}
 		.speaker a {
@@ -524,11 +524,32 @@ object{
 	border-radius: 100%;
 	width: 45px;
 	height: 45px;
-	box-shadow: 0px 0px 5px 1px black;
+	box-shadow:1px 1px 3px 0px rgba(0,0,0,0.7);
+	-moz-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 	cursor: pointer;
 	background-color: #fff;
 	display: none;
 }
+#spk_back:hover
+{
+	box-shadow: 0 2px 6px rgba(0,0,0,0.75);
+}
+
+#spk_back img
+{
+height: 25px;width: 25px;margin: 10px;
+	-moz-transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+#spk_back:hover img
+{
+ margin-left:7px;
+ margin-right: 13px;
+}
+
 #arrow_box{
 	position: absolute;
 	right:-13px;
@@ -664,7 +685,7 @@ object{
 /*-----------------------------CONTACTS----------------------------------*/
 #contacts
 {
-	background-color: #3E2723;
+	background-color: #2a373e;
 	color: white;
 	letter-spacing: 1px;
 }
@@ -817,7 +838,7 @@ p.about_content{
 /*--------------------Sponsors----------------------*/
 #spons
 {
-	background: #00838F;
+	background: #315A5F;
 }
 .spons_cont
 {
@@ -874,7 +895,10 @@ p.about_content{
     box-shadow: 1px 1px 5px 0px #111;
     background-color: white;
     border-radius: 3px;
+    opacity: 0;margin-top: 80px;
 }
+
+
 #regform>form
 {
 	width: 400px;
@@ -1051,7 +1075,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 	#red0{
 		background: #00838F;
-		height: 100%;
+		min-height: 100vh;
 		width: 100%;
 		display: none;
 		position: absolute;
@@ -1061,7 +1085,7 @@ input[type=number]::-webkit-outer-spin-button {
 	#blue0{
 		background:#CC2A41;
 		width: 50%;
-		height: 100%;
+		min-height: 100vh;
 		top: 0;
 		right: -50%;
 		position: absolute;
