--- a/css/main.css
+++ b/css/main.css
@@ -240,7 +240,7 @@ html,body {
 	position: absolute;
 	top: 100%;
 	height: 40px;
-	width: 200px;
+	width: 215px;
 	left: 0;
 	right: 0;
 	border-top: 1px solid black;
@@ -254,7 +254,7 @@ html,body {
 #facebook,#twitter,#gplus,#youtube{
 	height: 40px;
 	width: 40px;
-	float: left;
+	display: inline-block;
 	margin-right: 5px;
 	margin-left: 5px;
 	background: transparent;
