--- a/css/main.css
+++ b/css/main.css
@@ -896,6 +896,8 @@ p.about_content{
     background-color: white;
     border-radius: 3px;
     opacity: 0;margin-top: 80px;
+    font-size: 1.4em;
+    text-align: center;
 }
 
 
