--- a/css/loader.css
+++ b/css/loader.css
@@ -17,8 +17,8 @@
   border-radius: 50%;
 }
 .load .dot {
-  width: 96px;
-  height: 96px;
+  width: 9.6vw;
+  height: 9.6vw;
   background: #FFFFFF;
   -moz-animation: in 4s linear infinite;
   -webkit-animation: in 4s linear infinite;
@@ -44,13 +44,13 @@
   animation: out2 4s linear infinite;
 }
 .load .outline {
-  width: 120px;
-  height: 120px;
+  width: 12vw;
+  height: 12vw;
   z-index: 2;
 }
 .load .outline span {
-  width: 68px;
-  height: 68px;
+  width: 6.8vw;
+  height: 6.8vw;
   -moz-transform-origin: 100% 100%;
   -webkit-transform-origin: 100% 100%;
   transform-origin: 100% 100%;
@@ -318,17 +318,22 @@
     background: #FFFFFF;
   }
 }
-
+@-moz-keyframes out1 {
+  0% {
+    width: 0px;
+    height: 0px;
+  }
+  30%,100% {
+    width: 120vw;
+    height: 120vw;
+  }
+}
 @-webkit-keyframes out1 {
   0% {
     width: 0px;
     height: 0px;
   }
-  30% {
-    width: 120vw;
-    height: 120vw;
-  }
-  100% {
+  30%,100% {
     width: 120vw;
     height: 120vw;
   }
@@ -338,65 +343,37 @@
     width: 0px;
     height: 0px;
   }
-  30% {
-    width: 120vw;
-    height: 120vw;
-  }
-  100% {
+  30%,100% {
     width: 120vw;
     height: 120vw;
   }
 }
 @-moz-keyframes out2 {
-  0% {
+  0%,30% {
     width: 0px;
     height: 0px;
   }
-  30% {
-    width: 0px;
-    height: 0px;
-  }
-  60% {
-    width: 120vw;
-    height: 120vw;
-  }
-  100% {
+  60%,100% {
     width: 120vw;
     height: 120vw;
   }
 }
 @-webkit-keyframes out2 {
-  0% {
+  0%,30% {
     width: 0px;
     height: 0px;
   }
-  30% {
-    width: 0px;
-    height: 0px;
-  }
-  60% {
-    width: 120vw;
-    height: 120vw;
-  }
-  100% {
+  60%,100% {
     width: 120vw;
     height: 120vw;
   }
 }
 @keyframes out2 {
-  0% {
+  0%,30% {
     width: 0px;
     height: 0px;
   }
-  30% {
-    width: 0px;
-    height: 0px;
-  }
-  60% {
-    width: 120vw;
-    height: 120vw;
-  }
-  100% {
+  60%,100% {
     width: 120vw;
     height: 120vw;
   }
