--- a/css/loader.css
+++ b/css/loader.css
@@ -17,8 +17,8 @@
   border-radius: 50%;
 }
 .load .dot {
-  width: 9.6vw;
-  height: 9.6vw;
+  width: 96px;
+  height: 96px;
   background: #FFFFFF;
   -moz-animation: in 4s linear infinite;
   -webkit-animation: in 4s linear infinite;
@@ -29,7 +29,7 @@
   content: "";
   width: 0px;
   height: 0px;
-  background: #3A60DB;
+  background: #37474F;
   -moz-animation: out1 4s linear infinite;
   -webkit-animation: out1 4s linear infinite;
   animation: out1 4s linear infinite;
@@ -44,13 +44,13 @@
   animation: out2 4s linear infinite;
 }
 .load .outline {
-  width: 12vw;
-  height: 12vw;
+  width: 120px;
+  height: 120px;
   z-index: 2;
 }
 .load .outline span {
-  width: 6.8vw;
-  height: 6.8vw;
+  width: 68px;
+  height: 68px;
   -moz-transform-origin: 100% 100%;
   -webkit-transform-origin: 100% 100%;
   transform-origin: 100% 100%;
@@ -146,15 +146,15 @@
   }
   50% {
     -moz-transform: skewX(-40deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
   75% {
     -moz-transform: skewX(-60deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
   100% {
     -moz-transform: skewX(-80deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
 }
 @-webkit-keyframes outlineBefore {
@@ -171,15 +171,15 @@
   }
   50% {
     -webkit-transform: skewX(-40deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
   75% {
     -webkit-transform: skewX(-60deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
   100% {
     -webkit-transform: skewX(-80deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
 }
 @keyframes outlineBefore {
@@ -196,15 +196,15 @@
   }
   50% {
     transform: skewX(-40deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
   75% {
     transform: skewX(-60deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
   100% {
     transform: skewX(-80deg);
-    border: solid 5px #3463EB;
+    border: solid 5px #37474F;
   }
 }
 @-moz-keyframes in {
@@ -221,17 +221,17 @@
   41% {
     width: 0px;
     height: 0px;
-    background: #3A60DB;
+    background: #37474F;
   }
   50% {
     width: 144px;
     height: 144px;
-    background: #3A60DB;
+    background: #37474F;
   }
   90% {
     width: 0px;
     height: 0px;
-    background: #3A60DB;
+    background: #37474F;
   }
   91% {
     width: 0px;
@@ -258,17 +258,17 @@
   41% {
     width: 0px;
     height: 0px;
-    background: #3A60DB;
+    background: #37474F;
   }
   50% {
     width: 144px;
     height: 144px;
-    background: #3A60DB;
+    background: #37474F;
   }
   90% {
     width: 0px;
     height: 0px;
-    background: #3A60DB;
+    background: #37474F;
   }
   91% {
     width: 0px;
@@ -295,17 +295,17 @@
   41% {
     width: 0px;
     height: 0px;
-    background: #3A60DB;
+    background: #37474F;
   }
   50% {
     width: 144px;
     height: 144px;
-    background: #3A60DB;
+    background: #37474F;
   }
   90% {
     width: 0px;
     height: 0px;
-    background: #3A60DB;
+    background: #37474F;
   }
   91% {
     width: 0px;
@@ -324,8 +324,8 @@
     height: 0px;
   }
   30%,100% {
-    width: 120vw;
-    height: 120vw;
+    width: 200vw;
+    height: 200vw;
   }
 }
 @-webkit-keyframes out1 {
@@ -334,8 +334,8 @@
     height: 0px;
   }
   30%,100% {
-    width: 120vw;
-    height: 120vw;
+    width: 200vw;
+    height: 200vw;
   }
 }
 @keyframes out1 {
@@ -344,8 +344,8 @@
     height: 0px;
   }
   30%,100% {
-    width: 120vw;
-    height: 120vw;
+    width: 200vw;
+    height: 200vw;
   }
 }
 @-moz-keyframes out2 {
@@ -354,8 +354,8 @@
     height: 0px;
   }
   60%,100% {
-    width: 120vw;
-    height: 120vw;
+    width: 200vw;
+    height: 200vw;
   }
 }
 @-webkit-keyframes out2 {
@@ -364,8 +364,8 @@
     height: 0px;
   }
   60%,100% {
-    width: 120vw;
-    height: 120vw;
+    width: 200vw;
+    height: 200vw;
   }
 }
 @keyframes out2 {
@@ -374,8 +374,8 @@
     height: 0px;
   }
   60%,100% {
-    width: 120vw;
-    height: 120vw;
+    width: 200vw;
+    height: 200vw;
   }
 }
 *,
