--- a/css/main.css
+++ b/css/main.css
@@ -1013,6 +1013,11 @@ input[type=number]::-webkit-outer-spin-button {
 		position: relative;
 		width: 100%;
 	}
+	.event_cont{
+		width: 300px;
+		height: 225px;
+		font-size: 0.8em;
+	}
 }
 
 
