--- a/css/main.css
+++ b/css/main.css
@@ -1004,6 +1004,202 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /*---------------------REGistration End--------------------*/
+
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: scale(0, 0) translateY(0);
+            transform: scale(0, 0) translateY(0);
+  }
+  55%, 99.9% {
+    -webkit-transform: scale(1, 1) translateY(0);
+            transform: scale(1, 1) translateY(0);
+    background-color: #eee;
+  }
+  100%{
+  	-webkit-transform: scale(1, 1) translateY(0);
+            transform: scale(1, 1) translateY(0);
+  	background-color: transparent;
+  }
+}
+@keyframes slide {
+  0% {
+    -webkit-transform: scale(0, 0) translateY(0);
+            transform: scale(0, 0) translateY(0);
+  }
+  55%, 99.99% {
+    -webkit-transform: scale(1, 1) translateY(0);
+            transform: scale(1, 1) translateY(0);
+    background-color: #eee;
+  }
+  100%{
+  	-webkit-transform: scale(1, 1) translateY(0);
+            transform: scale(1, 1) translateY(0);
+  	background-color: transparent;
+  }
+}
+@-webkit-keyframes zoom {
+  0%, 35% {
+    width: 0;
+    height:0;
+  }
+  70%, 100% {
+    width: 100%;
+    height: 100%;
+  }
+}
+@keyframes zoom {
+  0%, 35% {
+    width: 0;
+    height:0;
+  }
+  70%, 100% {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+body{
+	background-color: #f6f6f6;
+}
+.slide{
+	-webkit-transform: scale(0, 0) translateY(0);
+            transform: scale(0, 0) translateY(0);
+	-webkit-animation-name: slide;
+			animation-name: slide;
+	-webkit-animation-timing-function: ease;
+			animation-timing-function: ease;
+	-webkit-animation-duration: 3s;
+			animation-duration: 3s;
+			animation-fill-mode: forwards;
+}
+.zoom{
+	position: absolute;
+	top:0;
+	left:0;
+	right:0;
+	bottom: 0;
+	margin:auto;
+	width: 100%;
+	height: 100%;
+	-webkit-animation-name: zoom;
+			animation-name: zoom;
+	-webkit-animation-duration: 3s;
+			animation-duration: 3s;
+}
+
+.event_cont:nth-child(2), .event_cont:nth-child(2) .zoom {
+  -webkit-animation-delay: .1s;
+          animation-delay: .1s;
+}
+.event_cont:nth-child(3), .event_cont:nth-child(3) .zoom {
+  -webkit-animation-delay: .2s;
+          animation-delay: .2s;
+}
+.event_cont:nth-child(4),, .event_cont:nth-child(4) .zoom {
+  -webkit-animation-delay: .3s;
+          animation-delay: .3s;
+}
+.event_cont:nth-child(5), .event_cont:nth-child(5) .zoom {
+  -webkit-animation-delay: .4s;
+          animation-delay: .4s;
+}
+.event_cont:nth-child(6), .event_cont:nth-child(6) .zoom {
+  -webkit-animation-delay: .5s;
+          animation-delay: .5s;
+}
+.event_cont:nth-child(7), .event_cont:nth-child(7) .zoom {
+  -webkit-animation-delay: .6s;
+          animation-delay: .6s;
+}
+/*Events*/
+#events{
+	background-color: #2c5773;
+}
+.event_cont{
+	position: relative;
+    display: inline-block;
+   	width: 400px;
+   	height: 300px;
+    padding: 10px 0;
+    overflow: hidden;
+    background-color: #eee;
+    background-position: bottom;
+    margin: 25px;
+    cursor: pointer;
+
+}
+
+.event_head{
+	font-size: 20px;
+    line-height: 30px;
+    text-align: left;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    padding: 15px;
+    width: 100%;
+    color: #F9F9F9;
+    background: rgba(0,0,0,0.7);
+    z-index: 10;
+    transition: transform 300ms;
+    -webkit-transition: -webkit-transform 300ms;
+}
+
+
+.event_details{
+	position: absolute;
+	width: 100%;
+	left:0;
+	top: 0px;
+	bottom:0;
+	color: #eee;
+	text-align: left;
+	-webkit-transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), height 0.8s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+          transition: width 0.8s cubic-bezier(0.23, 1, 0.32, 1), height 0.8s cubic-bezier(0.23, 1, 0.32, 1), transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform-origin: 50% 50%;
+      -ms-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+
+}
+.event_details img{
+	max-width: none;
+	width: 100%;
+}
+.eve_det_front{
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+}
+.eve_det_back{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding:30px;
+	font-size: 1.1em;
+	background-color: #f6f6f6;
+	color: #222;
+	-moz-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform: translateZ(-2px) rotateX(180deg);
+			transform: translateZ(-2px) rotateX(180deg);
+	-webkit-transition: box-shadow 0.8s ease;
+			transition: box-shadow 0.8s ease;
+}
+
+.event_details.is-open .eve_det_front {
+  pointer-events: none;
+  line-height: 160px;
+}
+.event_details.is-open {
+  -webkit-transform: rotateX(180deg);
+          transform: rotateX(180deg);
+}
+/*Events End*/
 @media screen and (max-width: 600px) {
 	#spk_content_cont{
 		left: -100vw;
